<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme_H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_random_number" />

            <TextView
                android:id="@+id/randomNumberResult"
                style="@style/AppTheme_RandomNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                tools:text="28" />

            <TextView
                style="@style/AppTheme_H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/label_save_random_number" />

            <Button
                android:id="@+id/generateButton"
                style="@style/BlueColoredButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/answer_no"
                android:text="@string/answer_no" />

            <TextView
                android:id="@+id/seekBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sequense_title"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:max="55"
                android:min="1"
                android:progress="1"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/seekBarValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="из диапазона" />

                <RadioButton
                    android:id="@+id/r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="или из списка" />

            </RadioGroup>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/container1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_from"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Минимум">

                        <EditText
                            android:id="@+id/edit_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_to"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Максимум">

                        <EditText
                            android:id="@+id/edit_to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <EditText
                    android:id="@+id/container2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine|number"
                    android:lines="4"
                    android:maxLines="4"
                    android:minLines="4"
                    android:text="1\n2\n3"
                    tools:ignore="Autofill,LabelFor" />

<!--                <com.google.android.material.chip.ChipGroup-->
<!--                    android:id="@+id/container2"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    />-->
            </FrameLayout>

            <CheckBox
                android:id="@+id/uniq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uniq" />
        </LinearLayout>
    </ScrollView>
</layout>