<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    android:fitsSystemWindows="true"-->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#4A148C"
        tools:context=".ui.activity.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.walhalla.luckypunch.ui.SquareLayout
                    android:id="@+id/tab1"
                    style="@style/AppTheme_SquareLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_control_selected">

                    <ImageView
                        android:id="@+id/icon_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_random_number" />

                    <TextView
                        android:id="@+id/title_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon_video"
                        android:layout_centerHorizontal="true"
                        android:text="@string/tab_random_number"
                        android:gravity="center"
                        style="@style/AppThemeTabItemTitle"/>

                    <TextView
                        android:id="@+id/tv_count_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_video"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="12dp"
                        android:text="1"
                        android:textColor="#FFFFFF" />


                </com.walhalla.luckypunch.ui.SquareLayout>


                <com.walhalla.luckypunch.ui.SquareLayout
                    android:id="@+id/tab2"
                    style="@style/AppTheme_SquareLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_control_normal">

                    <ImageView
                        android:id="@+id/icon_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_roulette" />

                    <TextView
                        android:id="@+id/title_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon_photo"
                        android:layout_centerHorizontal="true"
                        android:text="@string/tab_roulette"
                        android:gravity="center"
                        style="@style/AppThemeTabItemTitle" />

                    <TextView
                        android:id="@+id/tv_count_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_photo"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="12dp"
                        android:text="2"
                        android:textColor="#FFFFFF" />

                </com.walhalla.luckypunch.ui.SquareLayout>


                <com.walhalla.luckypunch.ui.SquareLayout
                    android:id="@+id/tab3"
                    style="@style/AppTheme_SquareLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_control_normal">

                    <ImageView
                        android:id="@+id/icon_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_icon" />

                    <TextView
                        android:id="@+id/title_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon_audio"
                        android:layout_centerHorizontal="true"
                        android:text="@string/tab_coin"
                        android:gravity="center"
                        style="@style/AppThemeTabItemTitle" />

                    <TextView
                        android:id="@+id/tvAudioCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_audio"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="12dp"
                        android:text="3"
                        android:textColor="#FFFFFF" />
                </com.walhalla.luckypunch.ui.SquareLayout>

            </LinearLayout>

<!--            android:background="#00BFA5"-->

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_below="@id/tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>